# 3D_FDTD_version008

./: .gitignore
3D_FDTD_version008/: 3D_FDTD_version008.code-workspace  CMakeLists.txt  CMakePresets.json  ParamsCheatSheet.txt  README.md  requirements.txt
3D_FDTD_version008/Py_Visualization/: 3D_FDTD_version006.code-workspace  load_grid.py  make_Ez_movie.py  make_Ez_movie_physical.py  make_Ez_probe.py  make_box_poynting.py  make_em_total_energy.py  make_index_profile.py  plot_field_movie_2d.py  plot_mesh_detector.py  plot_point_field.py  spatial_depletion.py  visual_gain_dynamics.py
3D_FDTD_version008/Shijie_code_reference/: Shijie_fdtd2dmetal4level_new.f90
3D_FDTD_version008/src/: 3D_FDTD_version008.cpp  auto_mesh_generator.hpp  boundary.hpp  detectors.hpp  fdtd_stepper.hpp  global_function.hpp  mesh_1d_profile_export.hpp  omp_config.hpp  parallel_domain.hpp  parallel_domain_v2.hpp  params.hpp  source.hpp  stability_monitor.hpp  structure_material.hpp  tls_materials.hpp  two_level_detectors.hpp  two_level_system.hpp  user_config.hpp
3D_FDTD_version008/src/detectors/: field_movie_2d.hpp  idetector.hpp  mesh_detector.hpp  point_field_detector.hpp
3D_FDTD_version008/src/sources/: dipole_source.hpp  isource.hpp  plane_wave_source.hpp
3D_FDTD_version008/tests/: README.md  make_Ez_test.py  test_auto_mesh.cpp  verify_mesh_override.cpp
